# maxill_tablet

./: CMakeLists.txt  CMakeLists.txt.user.d9f5d0e  FlickableText.qml  MainWindow.cpp  MainWindow.hpp  Maxill_V2.pro  jsonconverter.cpp  jsonconverter.h  main.cpp  main.qml  qml.qrc  qmldir
my_components/: DoubleSpinBox.qml  FlickableText.qml
qml/: DoubleSpinBox.qml  main.qml
